[package]
name = "rustfall"
version = "1.0.0"
authors = ["Jacob Boone <jboone989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
reqwest = { version = "^0.10", features = ["blocking", "json"] }
clap = "2.33.0"